# pyplotterlib

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  install_and_test.sh  local_install_and_test.sh  pyproject.toml  run_tests.sh
.github/workflows/: test-build.yml
Examples/for_doc_pages/: bar_plotter_a.ipynb  box_plotter.ipynb  discrete_heatmap_plotter.ipynb  extending_builtin.ipynb  extending_builtin_example_plotter.py  histogram_a.ipynb  image_plotter.ipynb  linePlotter.ipynb  rect_multi_plotter.ipynb  shared_ax_plotter.ipynb  split_axis_plotter.ipynb
docs/: conf.py  index.rst
docs/content/examples/: bar_plotter.rst  box_plotter.rst  discrete_heatmap_plotter.rst  double_axis_plotter.rst  extending_builtin.rst  histogram_plotter.rst  image_plotter.rst  line_plotter.rst  rect_multi_plotter.rst  split_axis_plotter.rst
docs/content/getting_started/: installation.rst  quick_start.rst  why_ppl.rst
src/pyplotlib/core/: json_transform.py  plot_command.py  plot_options.py  plotters.py
src/pyplotlib/core/serialization/: json_io.py  register.py  registration_funct.py
src/pyplotlib/core/unit_tests/: utest_plot_options.py  utest_plotters.py
src/pyplotlib/reg_testing/viz_diff/: helpers.py
src/pyplotlib/standard/: plot_commands.py  plot_options.py  plotters.py  serialization.py
src/pyplotlib/standard/private/: bar_plotter.py  line_plotter.py  rect_multi_plotter.py  shared.py  shared_axis_plotter.py  split_axis_plotter.py  split_axis_plotter_creator.py
src/pyplotlib/temp/: temp_test.py
src/pyplotterlib/core/: json_transform.py  plot_command.py  plot_options.py
src/pyplotterlib/core/serialization/: registration_funct.py
src/pyplotterlib/core/unit_tests/: utest_plot_options.py  utest_plotters.py
src/pyplotterlib/reg_testing/: shared.py
src/pyplotterlib/reg_testing/read_serialization_test/: helpers.py
src/pyplotterlib/standard/: annotations.py  plot_commands.py  plot_options.py  plotters.py  serialization.py
tests/: create_doc_figs.py  create_viz_cmp_figs.py  run_all_unit_tests.py  run_read_ser_tests.py  view_vizdiff.ipynb
tests/viz_cmp_tests/image_plotter/: image_sources.txt
(+77 files in other folders)
