# pyproject.toml

[build-system]
requires      = ["setuptools>=60.9.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplotlib"
version = "1.0.0"
description = "TODO"
readme = "README.md"
authors = [{ name = "Richard Fogarty", email = "richard.m.fogarty@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    "numpy",
    "matplotlib",
]

#requires-python = ">=3.9"

#Note: Initially created with python 3.10.4; but not sure if i can specify that anywhere
[project.optional-dependencies]
pinned = ["numpy ==1.22.2", "matplotlib==3.5.1"]
dev = ["numpy", "matplotlib", "ipyplot"]

#[project.urls]
#Homepage = "https://github.com/RFogarty1/PUT_REPO_HERE"

#[project.scripts]
#something = "pyplotlib.__main__:main"
